feat: added canvas

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ body {
 }
 
 *::selection {
-    @apply bg-cyan-500 text-black
+    @apply bg-neutral-900 text-neutral-300
 }
 
 ::-webkit-scrollbar {
